# network_programming

./: README.md
01 理解网络编程和套接字/: client.cpp  service.cpp
02 文件的读取操作/: main.cpp
03 TCP的无边界问题/: CMakeLists.txt  client.cpp  service.cpp
04 大小端存储鉴别/: main.cpp
05 网络字节序与本机字节序转换/: main.cpp
06 实现迭代服务器、客户端/: client.cpp  service.cpp
07 自定义通信协议/: client.cpp  service.cpp
08  基于TCP的半关闭/: service.cpp
09 gethostbyname函数的使用/: main.cpp
10 gethostbyaddr函数的使用/: main.cpp
11 getsockopt函数的使用/: main.cpp
12 设置缓冲区的大小/: main.cpp
13 重启服务器绑定失败/: client.cpp  service.cpp
14 检测输入缓冲/: CMakeLists.txt  client.cpp  service.cpp
15 readv和writev函数使用/: main.cpp
